# CanopyKit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  zynd_wrapper.py
.github/workflows/: ci.yml
canopykit/: __init__.py  __main__.py  artifact_validator.py  channel_bridge.py  channel_router.py  claim_worker.py  config.py  event_adapter.py  inbox_supervisor.py  metrics.py  mode_manager.py  redaction.py  runloop.py  runtime.py  shadow_selftest.py  state_machine.py  subscription_policy.py
docs/: AGENT_STACKS.md  GITHUB_RELEASE_v0.1.0.md  INITIATIVE_MODEL.md  MESH_DEPLOYMENT.md  OPERATOR_ACCEPTANCE.md  QUICKSTART.md  RELEASE_CHECKLIST.md  RUNTIME_V1.md  SERVICE_RUNBOOK.md  SHADOW_SELFTEST.md
examples/: canopykit.config.json
tests/: test_artifact_validator.py  test_channel_bridge.py  test_channel_router.py  test_claim_worker.py  test_event_adapter_contract.py  test_event_adapter_runtime.py  test_inbox_supervisor.py  test_metrics.py  test_mode_manager.py  test_public_release_hygiene.py  test_redaction.py  test_release_metadata.py  test_runloop.py  test_scaffolding.py  test_shadow_selftest.py  test_state_machine.py  test_subscription_policy.py
tests/fixtures/: probe_agent_scoped.json  probe_auth_blocked.json  probe_global_fallback.json
